fix: [MIX-147] hide edit on small track width (#74)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,31 +13,27 @@ body {
   user-select: none;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer base {
+  svg {
+    flex-shrink: 0;
   }
-}
 
-svg {
-  flex-shrink: 0;
-}
+  ::-webkit-scrollbar {
+    width: 9px;
+    height: 9px;
+  }
 
-::-webkit-scrollbar {
-  width: 9px;
-  height: 9px;
-}
+  ::-webkit-scrollbar-track {
+    background: theme(colors.third.DEFAULT);
+    border-radius: 9px;
+  }
 
-::-webkit-scrollbar-track {
-  background: theme(colors.third.DEFAULT);
-  border-radius: 9px;
-}
+  ::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.43);
+    border-radius: 9px;
+  }
 
-::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.43);
-  border-radius: 9px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.53);
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.53);
+  }
 }
